# momostack

./: .gitignore  LICENSE  Proxmox VE 创建虚拟机指导.md  README.md
books/: 1368-vocabulary-is-enough-mind-map.xmind  1368-vocabulary-is-enough.md  30passages30days.md  english-roots-and-decipher-their-derivatives.md  streaming-systems.md
docs/: flink.md  java-new-features.md  java-patten-matching.md  vscode-setup.md
docs/ai/: nlp.md  roadmap.md
docs/booknotes/: streaming-systems.md
docs/english/: 1368-vocabularies-basic.md  30-passages-30-days.md  roadmap.md
docs/python/: concurrent.md  package_manager.md  useful-links.md  useful_links.md
docs/reading/: 1368-vocabularies-basic.md
flink/flink-async-function/: pom.xml
flink/flink-async-function/src/main/resources/: log4j2.xml
flink/flink-table-api-examples/: pom.xml
flink/flink-table-api-examples/src/main/resources/: application.yaml
guide/python/: pyproject.toml
guide/python/docs/: beginner.md  concurrent.md  sqlbuilder.md
guide/python/src/: sql_builder.py
http/: README.md
http/apache-http-client/: pom.xml
hyperlink-recognition/docs/: Benchmark.md  Hyperlink Recognition in Legal Documents.md  Regex Optimization Guide.md
hyperlink-recognition/docs/prompts/: Code Review and Unit Test Generation.md
hyperlink-recognition/python/: README.md  pyproject.toml  test_runner.py
hyperlink-recognition/python/docs/: Hyperlink Recognition Overview.md  Hyperlink Recognition in Legal Documents.md
hyperlink-recognition/python/src/: decorators.py  structures.py  typings.py
hyperlink-recognition/python/src/benchmark/: benchmark.py
hyperlink-recognition/python/src/recognition/: associator.py  data_model.py  datamodels.py  extractor.py  helper.py  normalizer.py  patterns.py  postprocessor.py  recognition.py  resolver.py  structures.py
hyperlink-recognition/python/src/resources/: AsciiMapping.json  KeywordMapping.json  PatternMapping.json
hyperlink-recognition/python/src/utils/: coll_util.py  http_util.py  io_util.py  text_util.py
hyperlink-recognition/python/tests/unit/: test_associator.py  test_extractor.py  test_helper.py  test_normalizer.py  test_paired_symbol_extractor.py  test_postprocessor.py  test_resolver.py  test_resovler.py  test_structures.py  test_text_util.py
hyperlink-recognition/samples/: The Civil Code of the People's Republic of China.htm
jdbc/: README.md
jdbc/jdbc-dsl/: pom.xml
jdbc/jdbc-dsl-annotation-processor/: pom.xml
lanproxy/: .dockerignore  Dockerfile.frpc  Dockerfile.frps  README.md  build.py  build_image.py  startup.py
lanproxy/Infrastructure/: Dockerfile.frpc  Dockerfile.frps
lanproxy/conf/: frpc.toml  frps.toml
lanproxy/dockerfiles/: Dockerfile.frpc  Dockerfile.frps
linkgen/docs/: Benchmark.md  benchmark-changelog.md  link-recognition-in-legal-documents.md  link-recognition-overview.md
linkgen/python/linkgen/: pyproject.toml  test_runner.py
linkgen/python/linkgen/examples/: validator.py  validator_bak.py
linkgen/python/linkgen/src/benchmark/: benchmark.py
linkgen/python/linkgen/src/linkgen/: config.py  decorators.py  entity_extractor.py  exceptions.py  extractor.py  helper.py  models.py  normalizer.py  resolver.py  searcher.py  structures.py  tokenizer.py  validator.py
linkgen/python/linkgen/src/linkgen/awsclients/: dynamodb.py
linkgen/python/linkgen/src/linkgen/resources/: DocMetaMapping.json  KeywordMapping.json  PatternMapping.json  config.toml  doc_meta_list.json  keyword_mapping.json  law_abbr_mapping.json  pattern_mapping.json  promulgator_mapping.json
linkgen/python/linkgen/src/linkgen/utils/: coll_util.py  http_util.py  io_util.py  text_util.py
linkgen/python/linkgen/tests/: test_extractor.py  test_helper.py  test_normalizer.py  test_resolver.py  test_structures.py  test_text_util.py
linkgen/samples/: The Civil Code of the People's Republic of China.xml
micronaut/: README.md
micronaut/micronaut-example/: README.md  pom.xml
micronaut/micronaut-example/src/main/resources/: application.yaml  log4j2.xml
mock/: README.md
mock/datagenerator/: README.md
mock/datagenerator/java/datagenerator/: pom.xml
mock/datagenerator/python/: .coveragerc  .env  README.md  mypy.ini  requirements.txt
mock/datagenerator/python/datagenerator/: parser.py
ratelimiter/python/: README.md
ratelimiter/python/src/: ratelimiter.py
ratelimiter/python/tests/unit/: test_ratelimiter.py
reading/: 1368_vocabularies.md  1368_vocabularies_basic.md  30passages30days.md  learn_grammar_like_a_pro.md
report/python/: .env  pyproject.toml  test_runner.py
report/python/src/report/: plotting.py
sources/flink/flink-async-function/: README.md  pom.xml
sources/flink/flink-streaming-examples/: pom.xml
sources/http/: README.md
sources/http/apache-http-client/: pom.xml
sources/ratelimiter/python/: README.md  ratelimiter.py  test_runner.py
sources/ratelimiter/python/src/: ratelimiter.py
sources/retry/: README.md
sources/xml/xml2pdf/: pom.xml
taskflow/: README.md
taskflow/docs/: graph.md
taskflow/python/: .env  pyproject.toml
taskflow/python/src/taskflow/: core.py  exceptions.py  graph.py
taskflow/python/taskflow/: core.py
ttlcache/: README.md
(+76 files in other folders)
